--- a/Telas/Inicial.html
+++ b/Telas/Inicial.html
@@ -59,12 +59,12 @@
                   </button>
             </div>
         </div>
-        <div style="color:white; text-align: end;padding-top: 10%; padding-right: 2%">
-            <h2 style="color:white;">Precisando de um serviço?</h2>
+        <div style="color:black; text-align: end;padding-top: 10%; padding-right: 2%">
+            <h2 style="color:black;">Precisando de um serviço?</h2>
             <p>Encontre o profissional ideal para o serviço que procura.<br> acesso a todas as informações que necessita sobre <br>os profissionais próximos a você.</p>
         </div>
     </div>
-
+    <br><br>
     <div class="container">
         <h4 style='text-align: center;'>Categorias em alta</h4>
         <br>
