--- a/Telas/Inicial.html
+++ b/Telas/Inicial.html
@@ -167,27 +167,27 @@
             <div class="row">
                 <div class="col-lg-2.5 col-md-3 mb-2.5" style="text-align: center">
                     <p>BUSQUE</p>
-                    <img src="../images/people.png" class="img1" style="margin-right: 100px">
+                    <img src="../images/people.png" class="img1" style="margin-right: 150px">
                     <p> Busque o profissional ideal para você estabelecendo filtros de busca.</p>
                 </div>
                 <div class="col-lg-2.5 col-md-3 mb-2.5" style="text-align: center">
                     <p>CATÁLOGO</p>
-                    <img src="../images/catalogo.png" class="img1" style="margin-right: 100px">
+                    <img src="../images/catalogo.png" class="img1" style="margin-right: 150px">
                     <P>Observe o portfolio do profissional para ver se est’a de acordo com o que busca.</P>
                 </div>
                 <div class="col-lg-2.5 col-md-3 mb-2.5" style="text-align: center">
                     <p>CONTRATO</p>
-                    <img src="../images/comente.png" class="img1" style="margin-right: 100px">
+                    <img src="../images/comente.png" class="img1" style="margin-right: 120px">
                     <P> Entre em contato com o profissional pelo site para estabelecer maiores detalhes sobre o trabalho.</P>
                 </div>
                 <div class="col-lg-2.5 col-md-3 mb-2.5" style="text-align: center">
                     <p>ACEITAR</p>
-                    <img src="../images/confirma.png" class="img1" style="margin-right: 100px">
+                    <img src="../images/confirma.png" class="img1" style="margin-right: 120px;">
                     <P> Pode realizar o pagamento antes ou depois do trabalho, diretamente como profissional ou pelo site de acordo com o que necessitar</P>
                 </div>
                 <div class="col-lg-2.5 col-md-3 mb-2.5" style="text-align: center">
                     <p>AVALIE</p>
-                    <img src="../images/avalia.png" class="img1" style="margin-right: 100px">
+                    <img src="../images/avalia.png" class="img1" style="margin-right: 150px">
                     <P> Publique seu depoimento na página do profissional e avalie otrabalho para contribuir para futuros clientes</P>
                 </div>
             </div>
