--- a/Telas/portfolio.html
+++ b/Telas/portfolio.html
@@ -57,8 +57,9 @@
             <div class="row h-100 align-items-center">
                 <div class="col-lg-12">
                     <h1 class="display-4 text-white mt-5 mb-2" style="position:relative; right:65%;">Maria Antonieta</h1>
-                    <img src="../images/mina.jpg" style="position: relative; max-width: 40%; max-height: 0%;">
-                    <p class="lead mb-5 text-white-50">Costureira, faço cortes e costuras nas mais diversas<br> peças de roupas</p>
+                    <h1 style="position: absolute; left: 50%;top: 30%; color:white; font-size: 100px">#Costureira</h1>
+                    <img src="../images/mina.jpg" style="position: relative; max-width: 40%; max-height: 300px;">
+                    <p class="lead mb-5 text-white-50"><br>Costureira, faço cortes e costuras nas mais diversas<br> peças de roupas</p>
                     <span class="badge badge-light badge-pill">Reparos</span> <span class="badge badge-light badge-pill">Vestidos de baile</span> <span class="badge badge-light badge-pill">Saias</span>
                     <span class="badge badge-light badge-pill">Reparos</span> <span class="badge badge-light badge-pill">Vestidos de baile</span> <span class="badge badge-light badge-pill">Saias</span>
                     <h1 class="display-4 text-white mt-3 mb-2"> &#9733; &#9733; &#9733; &#9733; &#9734;</h1>
@@ -68,9 +69,9 @@
     </div>
     <section style="margin-left: 20%;">
         <div>
-          <a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/images/image-1.jpg" data-lightbox="example-1"><img class="example-image" src="http://lokeshdhakar.com/projects/lightbox2/images/thumb-1.jpg" alt="image-1" /></a>
-          <a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/images/image-2.jpg" data-lightbox="example-2" data-title="Optional caption."><img class="example-image" src="http://lokeshdhakar.com/projects/lightbox2/images/thumb-2.jpg" alt="image-1"/></a>
-          <a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/images/image-2.jpg" data-lightbox="example-2" data-title="Optional caption."><img class="example-image" src="http://lokeshdhakar.com/projects/lightbox2/images/thumb-2.jpg" alt="image-1"/></a>
+          <a class="example-image-link" href="../images/blusinha.jpg" data-lightbox="example-1"><img class="example-image" src="../images/blusinha.jpg" alt="image-1" /></a>
+          <a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/images/image-2.jpg" data-lightbox="example-2" data-title="Optional caption."><img class="example-image" src="../images/almofada.jpg" alt="image-1"/></a>
+          <a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/images/image-2.jpg" data-lightbox="example-2" data-title="Optional caption."><img class="example-image" src="../images/casaquim.jpg" alt="image-1"/></a>
         </div>
         <div>
           <a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/images/image-3.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="http://lokeshdhakar.com/projects/lightbox2/images/thumb-3.jpg" alt=""/></a>
