--- a/Telas/Inicial.html
+++ b/Telas/Inicial.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/lightbox.scss">
     <script type="text/javascript" src="../javascript/IServices.js"></script>
     <script src="https://kit.fontawesome.com/10a7600da8.js" crossorigin="anonymous"></script>
 
@@ -185,27 +186,7 @@
                     <img src="../images/confirma.png" class="img1" style="margin-right: 120px;">
                     <P> Pode realizar o pagamento antes ou depois do trabalho, diretamente como profissional ou pelo site de acordo com o que necessitar</P>
                 </div>
-                <div class="col-lg-2.5 col-md-3 mb-2.5" style="text-align: center">
-                    <p>AVALIE</p>
-                    <img src="../images/avalia.png" class="img1" style="margin-right: 150px">
-                    <P> Publique seu depoimento na página do profissional e avalie otrabalho para contribuir para futuros clientes</P>
-                </div>
             </div>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr style="text-align: center;">
-                <td style="font-size:14px; padding: 0% 1% 0% 1%"></td>
-                <td style="font-size:14px"></td>
-                <td style="font-size:14px; padding: 0% 1% 0% 1% "></td>
-                <td style="font-size:14px; padding: 0% 1% 0% 1%"></td>
-                <td style="font-size:14px; padding: 0% 1% 0% 1%"></td>
-            </tr>
-            </table>
         </div>
         <br><br><br><br>
     </div>
