--- a/Telas/oferta-serviço.html
+++ b/Telas/oferta-serviço.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/lightbox.scss">
     <script type="text/javascript" src="IServices.js"></script>
     <script src="https://kit.fontawesome.com/10a7600da8.js" crossorigin="anonymous"></script>
 
