--- a/Telas/portfolio.html
+++ b/Telas/portfolio.html
@@ -67,17 +67,17 @@
             </div>
         </div>
     </div>
-    <section style="margin-left: 20%;">
-        <div>
+    <section class="row "style="margin-left: 20%;">
+        <div class="col-lg-2.5 col-md-3 mb-2.5">
           <a class="example-image-link" href="../images/blusinha.jpg" data-lightbox="example-1"><img class="example-image" src="../images/blusinha.jpg" alt="image-1" /></a>
-          <a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/images/image-2.jpg" data-lightbox="example-2" data-title="Optional caption."><img class="example-image" src="../images/almofada.jpg" alt="image-1"/></a>
-          <a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/images/image-2.jpg" data-lightbox="example-2" data-title="Optional caption."><img class="example-image" src="../images/casaquim.jpg" alt="image-1"/></a>
+          <a class="example-image-link" href="../images/blusinha.jpg" data-lightbox="example-1"><img class="example-image" src="../images/blusinha.jpg" alt="image-1" /></a>
+          <a class="example-image-link" href="../images/blusinha.jpg" data-lightbox="example-1"><img class="example-image" src="../images/blusinha.jpg" alt="image-1" /></a>
         </div>
         <div>
-          <a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/images/image-3.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="http://lokeshdhakar.com/projects/lightbox2/images/thumb-3.jpg" alt=""/></a>
-          <a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/images/image-4.jpg" data-lightbox="example-set" data-title="Or press the right arrow on your keyboard."><img class="example-image" src="http://lokeshdhakar.com/projects/lightbox2/images/thumb-4.jpg" alt="" /></a>
-          <a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/images/image-5.jpg" data-lightbox="example-set" data-title="The next image in the set is preloaded as you're viewing."><img class="example-image" src="http://lokeshdhakar.com/projects/lightbox2/images/thumb-5.jpg" alt="" /></a>
-          <a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/images/image-6.jpg" data-lightbox="example-set" data-title="Click anywhere outside the image or the X to the right to close."><img class="example-image" src="http://lokeshdhakar.com/projects/lightbox2/images/thumb-6.jpg" alt="" /></a>
+            <a class="example-image-link" href="../images/blusinha.jpg" data-lightbox="example-1"><img class="example-image" src="../images/blusinha.jpg" alt="image-1" /></a>
+            <a class="example-image-link" href="../images/blusinha.jpg" data-lightbox="example-1"><img class="example-image" src="../images/blusinha.jpg" alt="image-1" /></a>
+            <a class="example-image-link" href="../images/blusinha.jpg" data-lightbox="example-1"><img class="example-image" src="../images/blusinha.jpg" alt="image-1" /></a>
+            <a class="example-image-link" href="../images/blusinha.jpg" data-lightbox="example-1"><img class="example-image" src="../images/blusinha.jpg" alt="image-1" /></a>
         </div>
       </section>
 
