--- a/Telas/portfolio.html
+++ b/Telas/portfolio.html
@@ -67,19 +67,36 @@
             </div>
         </div>
     </div>
-    <section class="row "style="margin-left: 20%;">
-        <div class="col-lg-2.5 col-md-3 mb-2.5">
-          <a class="example-image-link" href="../images/blusinha.jpg" data-lightbox="example-1"><img class="example-image" src="../images/blusinha.jpg" alt="image-1" /></a>
-          <a class="example-image-link" href="../images/blusinha.jpg" data-lightbox="example-1"><img class="example-image" src="../images/blusinha.jpg" alt="image-1" /></a>
-          <a class="example-image-link" href="../images/blusinha.jpg" data-lightbox="example-1"><img class="example-image" src="../images/blusinha.jpg" alt="image-1" /></a>
-        </div>
-        <div>
-            <a class="example-image-link" href="../images/blusinha.jpg" data-lightbox="example-1"><img class="example-image" src="../images/blusinha.jpg" alt="image-1" /></a>
-            <a class="example-image-link" href="../images/blusinha.jpg" data-lightbox="example-1"><img class="example-image" src="../images/blusinha.jpg" alt="image-1" /></a>
-            <a class="example-image-link" href="../images/blusinha.jpg" data-lightbox="example-1"><img class="example-image" src="../images/blusinha.jpg" alt="image-1" /></a>
-            <a class="example-image-link" href="../images/blusinha.jpg" data-lightbox="example-1"><img class="example-image" src="../images/blusinha.jpg" alt="image-1" /></a>
-        </div>
-      </section>
+    <div class="container">
+        <div class="row">
+          <!-- Team Member 1 -->
+          <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-0 shadow">
+              <img src="../images/almofada.jpg" class="card-img-top" alt="...">
+            </div>
+          </div>
+          <!-- Team Member 2 -->
+          <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-0 shadow">
+              <img src="../images/blusinha.jpg" class="card-img-top" alt="...">
+            </div>
+          </div>
+          <!-- Team Member 3 -->
+          <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-0 shadow">
+              <img src="../images/casaquim.jpg" class="card-img-top" alt="...">
+            </div>
+          </div>
+          <!-- Team Member 4 -->
+          <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-0 shadow">
+              <img src="../images/sofa.jpg" class="card-img-top" alt="...">
+            </div>
+          </div>
+        <!-- /.row -->
+      
+      </div>
+      <!-- /.container -->
 
     <!-- Page Content -->
     <div class="container">
@@ -185,7 +202,7 @@
         <div class="row">
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
-                    <img class="card-img-top" src="http://placehold.it/150x50" alt="">
+                    <img class="card-img-top" src="../images/cabide.jpg" alt="">
                     <div class="card-body">
                         <h4 class="card-subtitle">Muito Profissional!</h4>
                         <p class="card-text">Uma breve descrição do serviço que ela prestou</p>
@@ -197,7 +214,7 @@
             </div>
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
-                    <img class="card-img-top" src="http://placehold.it/300x200" alt="25">
+                    <img class="card-img-top" src="../images/manequim.jpg" alt="25">
                     <div class="card-body">
                         <h4 class="card-subtitle">Ótima</h4>
                         <p class="card-text">Uma breve descrição do serviço que ela prestou</p>
@@ -209,7 +226,7 @@
             </div>
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
-                    <img class="card-img-top" src="http://placehold.it/150x50" alt="">
+                    <img class="card-img-top" src="../images/outro_casaquim.jpg" alt="">
                     <div class="card-body">
                         <h5 class="card-subtitle">Perfeita</h5>
                         <p class="card-text">Uma breve descrição do serviço que ela prestou</p>
