--- a/Telas/Inicial.html
+++ b/Telas/Inicial.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/lightbox.scss">
     <script type="text/javascript" src="../javascript/IServices.js"></script>
     <script src="https://kit.fontawesome.com/10a7600da8.js" crossorigin="anonymous"></script>
 
@@ -50,22 +49,25 @@
             </nav>
         </div>
     </header>
-    <br><br>
+    <br><br><br><br>
     <div class="topInicial">
         <div class="wrap">
-            <div class="search">
-                <input type="text" class="searchTerm" placeholder="O que está procurando?">
-                <button type="submit" class="searchButton">
-                     <i class="fa fa-search"></i>
-                  </button>
-            </div>
+            
+                <div class="card-body">
+                  <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search for...">
+                    <span class="input-group-btn">
+                      <button class="btn btn-info" type="button">Buscar</button>
+                    </span>
+                </div>
+              </div>
         </div>
         <div style="color:black; text-align: end;padding-top: 10%; padding-right: 2%">
             <h2 style="color:black;">Precisando de um serviço?</h2>
             <p>Encontre o profissional ideal para o serviço que procura.<br> acesso a todas as informações que necessita sobre <br>os profissionais próximos a você.</p>
         </div>
     </div>
-    <br><br>
+    <br><br><br><br>
     <div class="container">
         <h4 style='text-align: center;'>Categorias em alta</h4>
         <br>
@@ -186,7 +188,27 @@
                     <img src="../images/confirma.png" class="img1" style="margin-right: 120px;">
                     <P> Pode realizar o pagamento antes ou depois do trabalho, diretamente como profissional ou pelo site de acordo com o que necessitar</P>
                 </div>
+                <div class="col-lg-2.5 col-md-3 mb-2.5" style="text-align: center">
+                    <p>AVALIE</p>
+                    <img src="../images/avalia.png" class="img1" style="margin-right: 150px">
+                    <P> Publique seu depoimento na página do profissional e avalie otrabalho para contribuir para futuros clientes</P>
+                </div>
             </div>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr style="text-align: center;">
+                <td style="font-size:14px; padding: 0% 1% 0% 1%"></td>
+                <td style="font-size:14px"></td>
+                <td style="font-size:14px; padding: 0% 1% 0% 1% "></td>
+                <td style="font-size:14px; padding: 0% 1% 0% 1%"></td>
+                <td style="font-size:14px; padding: 0% 1% 0% 1%"></td>
+            </tr>
+            </table>
         </div>
         <br><br><br><br>
     </div>
